<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbarStyle="insideOverlay"
    android:scrollbars="vertical"
    tools:context="ua.nure.cs.cs133.insight.MainActivity" >

    <TextView
        android:id="@+id/numMonumentsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="51dp"
        android:text="@string/numMonuments" />

    <TextView
        android:id="@+id/currentCoordinatesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/numMonumentsLabel"
        android:layout_marginLeft="17dp"
        android:text="@string/coordinates" />

    <Button
        android:id="@+id/getList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="getMonumentsList"
        android:text="@string/chkNearestBtnLabel" />

    <TextView
        android:id="@+id/numMonuments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/getList"
        android:layout_marginLeft="17dp"
        android:layout_toRightOf="@+id/numMonumentsLabel"
        android:text="@string/defEmptyStr" />

    <TextView
        android:id="@+id/currentCoordinates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/currentCoordinatesLabel"
        android:layout_alignBottom="@+id/currentCoordinatesLabel"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/currentCoordinatesLabel"
        android:text="@string/defEmptyStr"
        android:textSize="@dimen/coordinateTextSize" />

    <ScrollView
        android:id="@+id/monumentInfoScrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/prevMonumentBtn"
        android:layout_marginTop="10dp" >

        <LinearLayout
            android:layout_width="262dp"
            android:layout_height="173dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/monumentName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/defEmptyStr" />

            <TextView
                android:id="@+id/monumentDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defEmptyStr" />

            <ImageView
                android:id="@+id/monumentImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:baselineAlignBottom="false"
                android:src="@drawable/ic_launcher" />

            <EditText
                android:id="@+id/monumentDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="textMultiLine"
                android:linksClickable="true"
                android:textSize="@dimen/descTextSiza" />

            <TextView
                android:id="@+id/monumentBuilderLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monumentBuilderLabel" />

            <TextView
                android:id="@+id/monumentBuilder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defEmptyStr" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/netxMonumentBtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/monumentInfoScrollView"
        android:layout_alignRight="@+id/getList"
        android:onClick="showNextMonument"
        android:text="@string/nextMonumentBtnLabel"
        android:textSize="@dimen/btnTextSize" />

    <Button
        android:id="@+id/prevMonumentBtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/currentCoordinatesLabel"
        android:layout_below="@+id/currentCoordinatesLabel"
        android:onClick="showPrevMonument"
        android:text="@string/prevMonumentBtnLabel"
        android:textSize="@dimen/btnTextSize" />

</RelativeLayout>